projects/vb6parse/snapshots/parsers/cst/library/datetime/year/year_mod_operation.snap
---
source: projects/vb6parse/tests/library/datetime/year.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "    "
            - kind: AssignmentStatement
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: isLeap
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: ParenthesizedExpression
                  children:
                    - kind: LeftParenthesis
                      text: (
                    - kind: BinaryExpression
                      children:
                        - kind: BinaryExpression
                          children:
                            - kind: CallExpression
                              children:
                                - kind: Identifier
                                  text: Year
                                - kind: LeftParenthesis
                                  text: (
                                - kind: ArgumentList
                                  children:
                                    - kind: Argument
                                      children:
                                        - kind: IdentifierExpression
                                          children:
                                            - kind: Identifier
                                              text: dt
                                - kind: RightParenthesis
                                  text: )
                            - kind: Whitespace
                              text: " "
                            - kind: ModKeyword
                              text: Mod
                            - kind: Whitespace
                              text: " "
                            - kind: NumericLiteralExpression
                              children:
                                - kind: IntegerLiteral
                                  text: "4"
                        - kind: Whitespace
                          text: " "
                        - kind: EqualityOperator
                          text: "="
                        - kind: Whitespace
                          text: " "
                        - kind: NumericLiteralExpression
                          children:
                            - kind: IntegerLiteral
                              text: "0"
                    - kind: RightParenthesis
                      text: )
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
