projects/vb6parse/snapshots/parsers/cst/library/datetime/year/year_select_case.snap
---
source: projects/vb6parse/tests/library/datetime/year.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: SelectCaseStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: SelectKeyword
                  text: Select
                - kind: Whitespace
                  text: " "
                - kind: CaseKeyword
                  text: Case
                - kind: Whitespace
                  text: " "
                - kind: CallExpression
                  children:
                    - kind: Identifier
                      text: Year
                    - kind: LeftParenthesis
                      text: (
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children:
                            - kind: IdentifierExpression
                              children:
                                - kind: Identifier
                                  text: dt
                    - kind: RightParenthesis
                      text: )
                - kind: Newline
                  text: "\n"
                - kind: Whitespace
                  text: "        "
                - kind: CaseClause
                  children:
                    - kind: CaseKeyword
                      text: Case
                    - kind: Whitespace
                      text: " "
                    - kind: IntegerLiteral
                      text: "2020"
                    - kind: Newline
                      text: "\n"
                    - kind: StatementList
                      children:
                        - kind: Whitespace
                          text: "            "
                        - kind: CallStatement
                          children:
                            - kind: Identifier
                              text: DoLeapYear
                            - kind: Newline
                              text: "\n"
                        - kind: Whitespace
                          text: "        "
                - kind: CaseClause
                  children:
                    - kind: CaseKeyword
                      text: Case
                    - kind: Whitespace
                      text: " "
                    - kind: IntegerLiteral
                      text: "2021"
                    - kind: Newline
                      text: "\n"
                    - kind: StatementList
                      children:
                        - kind: Whitespace
                          text: "            "
                        - kind: CallStatement
                          children:
                            - kind: Identifier
                              text: DoNormal
                            - kind: Newline
                              text: "\n"
                        - kind: Whitespace
                          text: "    "
                - kind: EndKeyword
                  text: End
                - kind: Whitespace
                  text: " "
                - kind: SelectKeyword
                  text: Select
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
